<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CardDetailActivity">
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.Theme.ProjectManagerApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_card_details_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/Base.Theme.ProjectManagerApp.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_background"
        android:padding="@dimen/card_details_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_card_name"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/et_text_size"
                        tools:text="Test"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_color"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size"/>

                <TextView
                    android:id="@+id/tv_select_label_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_color"
                    android:textColor="@color/primary_text_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/members"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size"/>

                <TextView
                    android:id="@+id/tv_select_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_members"
                    android:textColor="@color/primary_text_color"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_selected_members_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size"/>

                <TextView
                    android:id="@+id/tv_select_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_due_date"
                    android:textColor="@color/primary_text_color"/>

                <Button
                    android:id="@+id/btn_update_card_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/card_details_update_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:textColor="@color/white"
                    android:text="@string/update"
                    android:textSize="@dimen/btn_text_size"/>
                
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>